--- a/public/css/suuStyle.css
+++ b/public/css/suuStyle.css
@@ -18,45 +18,123 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    font-weight: 600;
+}
+.gnb-wrap {
+    width: 55%;
 }
 .gnb {
     display: flex;
+    justify-content: space-between;
+}
+.dropdown {
+    float: left;
+    position: absolute;
+    background: #575757;
+    color: #e4e4e4;
+    opacity: 0;
+    visibility: hidden;
+} 
+.dropdown li {
+    padding: 10px 10px;
+
+}
+.gnb li:hover > .dropdown {
+    opacity: 1;
+    visibility: visible;
+    z-index: 200;
+}
+.sns-wrap {
+    width: 13%;
 }
 .sns {
+    font-size: 14px;
     display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 /* section 1 */
+.quickmenu-wrap {
+    position: fixed;
+    right: 3%;
+    z-index: 100;
+}
 /* section 2 */
 /* section 3 */
 /* footer */
 .footer-wrap {
     width: 1200px;
-    height: 150px;
+    height: 200px;
     margin: 0 auto;
 }
-.footer-left {
+.footer-left-wrap {
     float: left;
+    width: 25%;
+    height: 150px;
+    background: #727272;
     display: flex;
-    width: 30%;
-    height: 200px;
-    justify-content: right;
     align-items: center;
-    background: #575757;
+    position: relative;
+}
+.footer-left {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
+}
+.ft-logo {
     margin: 10px;
 }
+#copyright {
+    text-align: left;
+    font-size: 10px;
+    color: #b4b4b4;
+    padding: 40px 0 0 0;
+}
+.footer-right-wrap {
+    float: left;
+    width: 75%;
+    height: 150px;
+    background: #f2f2f2;
+    text-align: left;
+    position: relative;
+}
 .footer-right {
-    float: right;
-    width: 60%;
+    margin: 30px;
+    color: #656565;
 }
 .snb {
     display: flex;
     justify-content: space-between;
+    font-weight: 600;
+}
+.snb li {
+    padding-right: 15px;
+    border-right: 1px solid #656565;
+}
+.snb li:nth-child(4) {
+    font-size: 1.250rem;
+}
+.snb li:last-child {
+    border-right: 0px;
 }
 address {
-    margin: 10px 0 0 0;
+    margin: 25px 0 0 0;
+    display: inline-flex;
+}
+address p:nth-child(1) {
+    font-weight: 600;
 }
 .footer-right-addr {
     display: flex;
     justify-content: space-between;
-    font-size: 10px;
+    margin: 15px 0 0 0;
+    font-size: 12px;
+}
+.footer-right-addr li {
+    border-right: 1px solid #656565;
+    padding-right: 20px;
+}
+.footer-right-addr li:last-child {
+    border-right: 0px;
 }
