파일 위치 헷갈려서 다시 옮김...

--- a/public/css/suuStyle.css
+++ b/public/css/suuStyle.css
@@ -6,6 +6,9 @@ a, a:link {
     color: inherit;
     text-decoration: none;
 }
+.d-none {
+    display: none;
+}
 /* header */
 header {
     margin: 10px 0;
