--- a/public/css/suuStyle.css
+++ b/public/css/suuStyle.css
@@ -1,7 +1,7 @@
 body {
     position: relative;
     text-align: center;
-    font-family: "Noto Sans KR", "dotum", "Arial", "sans-serif";
+    font-family: "Nanum Gothic", "Noto Sans KR", "sans-serif";
 }
 a, a:link { 
     color: inherit;
@@ -29,6 +29,7 @@ header {
 .gnb {
     display: flex;
     justify-content: space-between;
+    font-weight: 600;
 }
 .dropdown {
     float: left;
@@ -58,11 +59,208 @@ header {
 /* section 1 */
 .quickmenu-wrap {
     position: fixed;
+    top: 37%;
     right: 3%;
     z-index: 100;
 }
+.bx-wrapper {
+    margin: 0 auto !important;
+    border: 0;
+}
+.bx-prev {
+    background: url("/public/images/prev.png") !important;
+    width: 27px !important;
+    height: 53px !important;
+}
+.bx-next {
+    background: url("/public/images/next.png") !important;
+    width: 27px !important;
+    height: 53px !important;
+}
+.slider-wrap {
+    width: 100%;
+    margin: 0 auto !important;
+}
+.silder {
+    width: 100%;
+    height: 100%;
+}
 /* section 2 */
+.snb-wrap {
+    position: relative;
+    display: flex;
+    justify-content: center;
+}
+.snb {
+    width: 1200px;
+    position: absolute;
+    bottom: -100%;
+    display: flex;
+    justify-content: center;
+}
+.snb li a {
+    width: 198px;
+    height: 50px;
+    background: white;
+    color: #666666;
+    display: flex;
+    text-align: center;
+    justify-content:center;
+    align-items: center;
+    margin: 0 2px 0 0;
+}
+.snb li a:hover {
+    background: #983b43;
+    color: #ffffff;
+}
 /* section 3 */
+.main-top {
+    width: 1200px;
+    height: 386px;
+    margin: 0 auto;
+}
+.top-left {
+    float: left;
+    width: 800px;
+    height: 386px;
+}
+.top-right {
+    float: left;
+    box-sizing: border-box;
+    width: 400px;
+    height: 386px;
+    padding: 40px;
+    background: #f5f4f2;
+    text-align: left;
+}
+.top-right h3 {
+    font-size: 24px;
+    font-weight: 600;
+    margin: 0 0 50px 0;
+}
+.top-right p {
+    font-size: 22px;
+    font-weight: 600;
+    color: #666666;
+    line-height: 30px;
+    margin: 0 0 50px 0;
+}
+.top-right input {
+    border: 0;
+    width: 300px;
+    height: 40px;
+    margin: 5px 0;
+    outline: none;
+}
+.top-right input:focus {
+    border: 0px;
+}
+#searchInput {
+    background: white url("/public/images/btn_main_store_search.gif") no-repeat 100% center;
+    text-indent: 15px;
+}
+#searchBt {
+    width: 304px;
+    background: #3b3230;
+    color: white;
+}
+.top-right input:nth-child(2) {
+    background: #3b3230;
+}
+.main-middle {
+    width: 1200px;
+    height: 500px;
+    margin: 0 auto;
+}
+.middle-left {
+    box-sizing: border-box;
+    float: left;
+    background: url("/public/images/brand_main_section3_img.jpg") no-repeat center / cover;
+    width: 400px;
+    height: 500px;
+    text-align: left;
+    padding: 50px 40px;
+}
+.middle-left h3 {
+    font-size: 24px;
+    font-weight: 700;
+    margin: 0 0 30px 0;
+}
+.middle-left p {
+    line-height: 28px;
+}
+.middle-left p:nth-child(3) {
+    margin: 30px 0 0 0;
+    font-weight: 700;
+    text-decoration: underline;
+}
+.middle-slider {
+    float: left;
+    width: 800px;
+    height: 500px;
+}
+.main-bottom {
+    width: 1200px;
+    height: 450px;
+    margin: 0 auto;
+}
+.bottom-left {
+    box-sizing: border-box;
+    padding: 60px 40px;
+    float: left;
+    width: 400px;
+    height: 450px;
+    background: #ede6d6;
+    text-align: left;
+}
+.bottom-left h3 {
+    font-size: 24px;
+    font-weight: 700;
+    margin: 0 0 50px 0;
+}
+.faq-wrap {
+    width: 320px;
+    height: 200px;
+}
+.faq-left {
+    display: flex;
+    width: 400px;
+    height: 50px;
+    margin: 0 0 70px 0;
+    line-height: 30px;
+}
+.faq-right {
+    display: flex;
+    width: 400px;
+    height: 50px;
+    line-height: 30px;
+}
+.bottom-left li:nth-child(1) {
+    width: 110px;
+    font-size: 22px;
+    font-weight: 700;
+}
+.bottom-left a {
+    padding: 15px 128px;
+    color: white;
+    text-align: center;
+    background: #6d5547;
+}
+.bottom-center {
+    float: left;
+    width: 400px;
+    height: 450px;
+    background: url("/public/images/bottom-center-img.jpg") no-repeat center / cover;
+}
+.bottom-right {
+    float: left;
+    width: 400px;
+    height: 450px;
+    background: url("/public/images/bottom-right-img.jpg") no-repeat center / cover;
+}
+.tea-recipe {
+    background: #f5eee8;
+}
 /* order */
 .hero-wrap {
     background: url("/public/images/page_top_visual_menu.jpg") no-repeat center / cover;
@@ -150,6 +348,7 @@ header {
 }
 .order1 {
     width: 1200px;
+    height: 300px;
     position: relative;
     margin: 150px 0 0 0;
 }
@@ -171,7 +370,7 @@ header {
     color: #666666;
 }
 .order1-right {
-    width: 65%;
+    width: 70%;
     display: flex;
     justify-content: space-between;
     float: right;
@@ -185,9 +384,97 @@ header {
     line-height: 25px;
     color: #666666;
 }
-.order2 {
+.order2-wrap {
     clear: both;
     position: relative;
+    background: url("/public/images/order_method_step2_back.jpg") no-repeat center / cover;
+    width: 100%;
+    height: 700px;
+}
+.order2 {
+    width: 1200px;
+    height: 650x;
+    margin: 0 auto;
+    padding: 70px;
+}
+.order2-left {
+    width: 25%;
+    float: left;
+    text-align: left;
+}
+.order2-left p:nth-child(1) {
+    color: #983b43;
+    font-size: 20px;
+    letter-spacing: 2px;
+}
+.order2-left p:nth-child(2) {
+    font-size: 40px;
+    margin: 15px 0 40px 0;
+}
+.order2-left p:nth-child(3) {
+    color: #666666;
+    line-height: 30px;
+}
+.order2-right-wrap {
+    width: 75%;
+    display: flex;
+    position: relative;
+    /* justify-content: space-between; */
+    float: right;
+    display: block;
+}
+.order2-right-wrap li {
+    width: 280px;
+    height: 220px;
+    background: white;
+    margin: 0 20px 20px 0;
+    padding: 30px 0 15px 0;
+    line-height: 30px;
+}
+.order2-right-top {
+    float: left;
+    display: inline-flex;
+}
+.order2-right-bottom {
+    float: left;
+    display: inline-flex;
+}
+.order3 {
+    width: 1200px;
+    height: 250px;
+    margin: 0 auto;
+    padding: 100px;
+}
+.order3-left {
+    width: 25%;
+    float: left;
+    text-align: left;
+}
+.order3-left p:nth-child(1) {
+    color: #983b43;
+    font-size: 20px;
+    letter-spacing: 2px;
+}
+.order3-left p:nth-child(2) {
+    font-size: 40px;
+    line-height: 46px;
+    margin: 15px 0 40px 0;
+}
+.order3-left p:nth-child(3) {
+    color: #666666;
+    line-height: 30px;
+}
+.order3-right-top {
+    display: inline-flex;
+}
+.order3-right-top h5 {
+    margin: 90px 40px 0 0;
+}
+.order3-right-bottom {
+    display: inline-flex;
+}
+.order3-right-bottom h5 {
+    margin: 90px 40px 0 0;
 }
 /* footer */
 .footer-wrap {
